Fixed layout issues

--- a/src/assets/scss/components/_section-title.scss
+++ b/src/assets/scss/components/_section-title.scss
@@ -14,7 +14,7 @@
 	}
 
 	&--secondary {		
-		font-size: 14px;
+		font-size: 17px;
 		font-weight: 500;
 
 		color: $black--two;
